--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body> <!-- Hero Section -->
     <header class="hero">
-        <div class="hero-img-wrapper"> <img src="asset/1.jpg" alt="Romantic Scenery" class="hero-img"> </div>
+        <div class="hero-img-wrapper"> <img src="1.jpg" alt="Romantic Scenery" class="hero-img"> </div>
         <div class="overlay"></div>
         <h1>Our Love..</h1>
     </header>
@@ -40,27 +40,27 @@
             <h2>Memories</h2>
             <div class="gallery-grid"> <!-- Gallery Items -->
                 <!-- Use 'data-full' for the high-res image shown in lightbox -->
-                <div class="gallery-item"> <img src="asset/img1.avif" data-full="assets/img1.jpg" alt="Memory 1"
+                <div class="gallery-item"> <img src="img1.avif" data-full="assets/img1.jpg" alt="Memory 1"
                         loading="lazy">
                     <div class="caption">♡𝕀 𝕝𝕠𝕧𝕖 𝕪𝕠𝕦♡</div>
                 </div>
-                <div class="gallery-item"> <img src="asset/img2.avif" data-full="assets/img2.jpg" alt="Memory 2"
+                <div class="gallery-item"> <img src="img2.avif" data-full="assets/img2.jpg" alt="Memory 2"
                         loading="lazy">
                     <div class="caption">♡𝕀 𝕝𝕠𝕧𝕖 𝕪𝕠𝕦♡</div>
                 </div>
-                <div class="gallery-item"> <img src="asset/img3.jpg" data-full="assets/img3.jpg" alt="Memory 3"
+                <div class="gallery-item"> <img src="img3.jpg" data-full="assets/img3.jpg" alt="Memory 3"
                         loading="lazy">
                     <div class="caption">♡𝕀 𝕝𝕠𝕧𝕖 𝕪𝕠𝕦♡</div>
                 </div>
-                <div class="gallery-item"> <img src="asset/img4.png" data-full="assets/img4.jpg" alt="Memory 4"
+                <div class="gallery-item"> <img src="img4.png" data-full="assets/img4.jpg" alt="Memory 4"
                         loading="lazy">
                     <div class="caption">♡𝕀 𝕝𝕠𝕧𝕖 𝕪𝕠𝕦♡</div>
                 </div>
-                <div class="gallery-item"> <img src="asset/img5.jpg" data-full="assets/img5.jpg" alt="Memory 5"
+                <div class="gallery-item"> <img src="img5.jpg" data-full="assets/img5.jpg" alt="Memory 5"
                         loading="lazy">
                     <div class="caption">♡𝕀 𝕝𝕠𝕧𝕖 𝕪𝕠𝕦♡</div>
                 </div>
-                <div class="gallery-item"> <img src="asset/img6.jpg" data-full="assets/img6.jpg" alt="Memory 6"
+                <div class="gallery-item"> <img src="img6.jpg" data-full="assets/img6.jpg" alt="Memory 6"
                         loading="lazy">
                     <div class="caption">♡𝕀 𝕝𝕠𝕧𝕖 𝕪𝕠𝕦♡</div>
                 </div>
