--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOVE LYRICS | webkaizen</title>
+    <title>LOVE LYRICS</title>
     <meta name="description" content="A romantic audio player with typewriter lyrics and photo gallery.">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -85,3 +85,4 @@
 </body>
 
 </html>
+
